fix alignment

--- a/resources/res/tree.css
+++ b/resources/res/tree.css
@@ -1,4 +1,7 @@
 #tree-container {
+    display: block;
+    width: fit-content;
+    height: fit-content;
     background: red;
     margin: 20px;
 }
